syntax = "proto3";

package pb;

import "member.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/YuanData/aquatrade/pb";

message LoginMemberRequest {
    string membername = 1;
    string password = 2;
}

message LoginMemberResponse {
    Member member = 1;
    string session_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp access_token_expires_at = 5;
    google.protobuf.Timestamp refresh_token_expires_at = 6;
}